Fix spacing between home info and cards

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -75,6 +75,7 @@ h1, h2, h3, h4, h5, h6, .profile_inner h1 {
     }
     .page-header, .profile-info, .first-entry {
         width: 100%;
+        margin-bottom: 0 !important;
     }
 }
 
